[gd_scene load_steps=9 format=3 uid="uid://c665m0jp2o6vs"]

[ext_resource type="Script" uid="uid://3v7jtfrf2xqd" path="res://scenes/games/disc/disc_shooting_player.gd" id="1_odfn2"]
[ext_resource type="PackedScene" uid="uid://ctvovfohsgits" path="res://scenes/utils/activate_motion_controls.tscn" id="2_q4jgv"]
[ext_resource type="PackedScene" uid="uid://bk4g2mc3xeixy" path="res://scenes/utils/joystick_ui.tscn" id="3_hcrv5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q4jgv"]

[sub_resource type="CylinderMesh" id="CylinderMesh_xflb5"]

[sub_resource type="Animation" id="Animation_uoohu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.159685, -0.197487, -0.248625)]
}

[sub_resource type="Animation" id="Animation_xflb5"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcymo"]
_data = {
&"RESET": SubResource("Animation_uoohu"),
&"shoot": SubResource("Animation_xflb5")
}

[node name="DiscShootingPlayer" type="CharacterBody3D"]
script = ExtResource("1_odfn2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q4jgv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Node3D_gun" type="Node3D" parent="Camera3D"]
transform = Transform3D(0.938444, 0.0275836, 0.344329, -0.341963, -0.0667259, 0.937341, 0.048831, -0.99739, -0.053186, 0.13798, -0.213167, -0.274791)

[node name="MeshInstance3D_gun" type="MeshInstance3D" parent="Camera3D/Node3D_gun"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.159685, -0.197487, -0.248625)
mesh = SubResource("CylinderMesh_xflb5")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/Node3D_gun/MeshInstance3D_gun"]
libraries = {
&"": SubResource("AnimationLibrary_wcymo")
}

[node name="ActivateGyro" parent="." instance=ExtResource("2_q4jgv")]

[node name="joystick_ui" parent="." instance=ExtResource("3_hcrv5")]
